# python-client-sword2

./: .gitignore  CHANGES.md  LICENSE.txt  MANIFEST.in  README  README.md  pyproject.toml  setup.cfg  setup.py  sword2_logging.conf  tox.ini
.hooks/: precommit.sh
debian/: changelog  control  copyright  rules
sword2/: __init__.py  atom_objects.py  auto_discovery.py  collection.py  compatible_libs.py  connection.py  deposit_receipt.py  error_document.py  exceptions.py  http_layer.py  implementation_info.py  server_errors.py  service_document.py  statement.py  sword2_logging.py  transaction_history.py  utils.py
tests/: README  test_connection_sss.py  test_deposit_receipt.py  test_entry.py  test_error_document.py
tests/databank/: __init__.py  test_databank.py  test_scale.py
tests/functional/: test_connection.py  test_deposit_receipt.py  test_entry.py  test_error_document.py  test_service_document.py  test_statement.py
tests/http/: test_sss.py
tests/pylons/: test_pylons.py
tests/spec/: test_spec.py
tests/urllib2tests/: test_urllib2.py
